test/corpus/doccomments-with-annotations.txt
================================================================================
Doccomments mixed with annotations
================================================================================

module module {

/// Doccomment

/// errant doccoment
@Annotation {
  "text": "This is a test annotation"
}
/// errant doccoment
struct WithId<I,T> {
 I id;
 T value;
};

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (struct_definition
        (definition_preamble
          (docstring)
          (docstring)
          (annotation
            (scoped_name
              (identifier))
            (json_value
              (json_object
                (json_object_pair
                  (json_string)
                  (json_value
                    (json_string))))))
          (docstring))
        (type_name
          (identifier))
        (type_parameters
          (scoped_name
            (identifier))
          (scoped_name
            (identifier)))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (identifier))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (identifier)))))))
