test/corpus/doccomments.txt
================================================================================
Doccomments
================================================================================

module module {

import another.module.fail;
import another.module2.*;


/// Struct doccomment
struct Content {
    /// Title doccomment
    String title;
};

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier))))
      (struct_definition
        (definition_preamble
          (docstring))
        (type_name
          (identifier))
        (field_block
          (field
            (definition_preamble
              (docstring))
            (type_expression
              (primitive_type))
            (identifier)))))))
