test/corpus/protoapp/db.txt
================================================================================
protoapp.db
================================================================================
module protoapp.db {

import common.time.Instant;
import common.db.DbTable;
import common.db.DbKey;
import common.db.WithId;
import common.strings.StringNE;
import common.strings.StringML;

struct AppUser {
  StringNE fullname;
  StringNE email;
  Bool is_admin;
  StringNE hashed_password = "";
};

newtype AppUserTable = WithId<AppUser>;
type AppUserId = DbKey<AppUserTable>;

annotation AppUserTable DbTable {
  "indexes" : [["email"]],
  "uniqueness_constraints": [["email"]],
  "id_prefix": "U-"
};

struct Message {
  Instant posted_at;
  AppUserId posted_by;
  StringML message;
};
newtype MessageTable = WithId<Message>;
type MessageId = DbKey<MessageTable>;

annotation MessageTable DbTable {
  "indexes" : [["posted_at"]],
  "id_prefix": "M-"
};

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier)
      (identifier))
    (module_body
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (struct_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier))
            (json_value
              (json_string)))))
      (newtype_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier))
          (type_arguments
            (type_expression
              (scoped_name
                (identifier))))))
      (type_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier))
          (type_arguments
            (type_expression
              (scoped_name
                (identifier))))))
      (annotation_declaration
        (scoped_name
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_object
            (json_object_pair
              (json_string)
              (json_value
                (json_array
                  (json_value
                    (json_array
                      (json_value
                        (json_string)))))))
            (json_object_pair
              (json_string)
              (json_value
                (json_array
                  (json_value
                    (json_array
                      (json_value
                        (json_string)))))))
            (json_object_pair
              (json_string)
              (json_value
                (json_string))))))
      (struct_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))))
      (newtype_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier))
          (type_arguments
            (type_expression
              (scoped_name
                (identifier))))))
      (type_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier))
          (type_arguments
            (type_expression
              (scoped_name
                (identifier))))))
      (annotation_declaration
        (scoped_name
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_object
            (json_object_pair
              (json_string)
              (json_value
                (json_array
                  (json_value
                    (json_array
                      (json_value
                        (json_string)))))))
            (json_object_pair
              (json_string)
              (json_value
                (json_string)))))))))
